--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -118,7 +118,7 @@
 .table-block {
   width: 100%;
   overflow: hidden;
-  font-weight: 400;
+  font-weight: 500;
   table {
     width: 100%;
     border-spacing: 0;
@@ -148,7 +148,7 @@
           background: #fff;
         }
         &:hover {
-          background-color: #f5f5f7;
+          background-color: #d1f0e8;
           td {
             color: #469379 !important;
           }
@@ -187,8 +187,9 @@
     min-height: auto;
     background: #fff;
     width: 100%;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+    overflow: hidden;
     margin-bottom: 15px;
   }
   &__left {
@@ -200,15 +201,26 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 62px;
-      width: 62px;
-      background-color: #40d88a;
-      border-radius: 2px;
+      height: 50px;
+      width: 50px;
+      background: linear-gradient(
+        136deg,
+        #57f5a4 0%,
+        #3aca80 62.5%,
+        #0fa859 100%
+      );
+      color: #fff;
+      border-radius: 8px;
+      margin-right: 15px;
     }
     .info-box-content {
-      padding: 5px 10px;
       .info-box-icon {
         font-size: 18px;
+      }
+      .info-box-number {
+        color: #919caa;
+        font-size: 16px;
+        font-weight: 500;
       }
     }
   }
@@ -234,17 +246,25 @@
         flex-wrap: wrap;
         border-radius: 4px;
         li {
-          width: 40px;
-          height: 40px;
+          width: 32px;
+          height: 32px;
           display: flex;
           justify-content: center;
           align-items: center;
-          margin: 1px;
+          font-size: 18px;
+          font-weight: 500;
           cursor: pointer;
-          background: #fafafa;
-          color: #666;
+          background: #f1f2f7;
+          color: #031b3c;
+          border-radius: 4px;
+          margin: 2px;
           &.active {
-            background-color: #40d88a;
+            background: linear-gradient(
+              136deg,
+              #57f5a4 0%,
+              #3aca80 62.5%,
+              #0fa859 100%
+            );
             color: #fff;
           }
           &.plabel {
