--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -7,7 +7,7 @@ $m-mobile-small: 500px;
 
 $font-main: "Montserrat", sans-serif;
 
-$color-main: #00598f;
+$color-main: #3f8bf1;
 $color-secondary: #40d88a;
 $color-danger: #c03f53;
 $color-grey: #f5f5f5;
