--- a/src/components/layouts/default/header/header.scss
+++ b/src/components/layouts/default/header/header.scss
@@ -21,36 +21,32 @@ $myBezier: cubic-bezier(0.4, 0, 0.2, 1);
   }
   &__language {
     position: relative;
+    height: 40px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    min-width: 68px;
-    height: 40px;
-    cursor: pointer;
-    background-color: #00598f;
-    padding: 10px;
-    border-radius: 24px;
+    background-color: #008bf8;
+    border-radius: 25px;
+    padding: 0 10px;
     margin-right: 20px;
+    cursor: pointer;
     & > span {
       font-size: 14px;
-      color: #fff;
       font-weight: 500;
+      color: #fff;
     }
   }
   &__account {
     position: relative;
-    min-width: 180px;
-    height: 50px;
     display: flex;
     align-items: center;
+    min-height: 40px;
     background-color: #fff;
-    border-radius: 100px;
-    padding: 10px;
+    border-radius: 25px;
+    padding-right: 10px;
     &-photo {
       cursor: pointer;
       display: flex;
       align-items: center;
-
       img {
         max-width: 40px;
         max-height: 40px;
@@ -65,8 +61,6 @@ $myBezier: cubic-bezier(0.4, 0, 0.2, 1);
         font-size: 14px;
         font-style: normal;
         font-weight: 500;
-        line-height: normal;
-        display: block;
       }
       .user-role {
         color: rgba(0, 0, 0, 0.25);
@@ -77,125 +71,47 @@ $myBezier: cubic-bezier(0.4, 0, 0.2, 1);
       }
     }
   }
-  &__dropdown-language {
+  .dropdown-menu {
+    position: absolute;
+    padding-top: 0.75rem;
+    z-index: 10;
+    top: 100%;
+    left: 0;
+    width: auto;
+    transform: translateY(10px);
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s;
+    &.active {
+      transform: translateY(0px);
+      visibility: visible;
+      opacity: 1;
+    }
     &-wrap {
-      position: absolute;
-      bottom: 0px;
-      left: 0%;
-      min-width: 100px;
-      width: 100%;
-      display: block !important;
-      visibility: hidden;
-      opacity: 0;
-      height: auto !important;
-      box-sizing: border-box;
-      max-height: calc(100vh - 2.7rem);
-      overflow-y: auto;
-      transform: translateY(100%);
+      padding: 4px;
+      list-style-type: none;
       background-color: #fff;
-      padding: 10px;
-      text-align: left;
-      border-radius: 7px 12px 12px 12px;
-      white-space: nowrap;
-      margin: -10px 0 0;
-      transition: all 0.25s ease;
-      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-      &.active {
-        transform: translateY(calc(100% + 10px)) !important;
-        visibility: visible !important;
-        opacity: 1 !important;
-      }
+      background-clip: padding-box;
+      border-radius: 8px;
+      outline: none;
+      box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08),
+        0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
     }
     &-item {
-      text-align: center;
-      padding: 0 5px;
-      margin-bottom: 1px;
-      transition: all 0.25s ease;
-      &:hover {
-        background-color: #f1f2f7;
-        border-radius: 12px;
-      }
-      & > span {
-        color: #919caa;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: normal;
-      }
-    }
-  }
-  &__dropdown-user {
-    &-wrap {
-      position: absolute;
-      bottom: 0px;
-      left: 0%;
-      min-width: 180px;
-      width: 100%;
-      display: block !important;
-      visibility: hidden;
-      opacity: 0;
-      height: auto !important;
-      box-sizing: border-box;
-      max-height: calc(100vh - 2.7rem);
-      overflow-y: auto;
-      transform: translateY(100%);
-      background-color: #fff;
-      padding: 10px;
-      text-align: left;
-      border-radius: 7px 24px 24px 24px;
-      white-space: nowrap;
-      margin: -10px 0 0;
-      transition: all 0.25s ease;
-      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      &.active {
-        transform: translateY(calc(100% + 10px)) !important;
-        visibility: visible !important;
-        opacity: 1 !important;
-      }
-    }
-    &-header {
-      color: #bfbfbf;
-      font-size: 12px;
-      font-weight: 500;
-      line-height: normal;
-    }
-    .divider {
-      width: 138px;
-      height: 1px;
-      background: rgba(191, 191, 191, 0.5);
-      margin: 9px auto;
-      overflow: hidden;
-    }
-    &-item {
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      padding: 3px 24px;
-      margin-bottom: 1px;
-      transition: all 0.25s ease;
-      width: fit-content;
-      margin: 0 auto;
-      margin-bottom: 10px;
+      margin: 0;
+      padding: 5px 12px;
+      color: rgba(0, 0, 0, 0.88);
+      font-weight: 400;
+      font-size: 14px;
       cursor: pointer;
-      &.logout {
-        display: flex;
-        align-items: center;
-      }
-      &:hover {
-        background-color: #f1f2f7;
-        border-radius: 12px;
-      }
-      & a > span,
-      span {
-        color: #919caa;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: normal;
-      }
-    }
-    &-link {
+      transition: all 0.2s;
+      position: relative;
       display: flex;
       align-items: center;
+      border-radius: 4px;
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.04);
+      }
     }
   }
 }
@@ -242,7 +158,8 @@ $myBezier: cubic-bezier(0.4, 0, 0.2, 1);
         }
       }
     }
-    .sidebar-humburger{}
+    .sidebar-humburger {
+    }
   }
 }
 @media (max-width: 576px) {
