--- a/src/components/layouts/default/header/header.scss
+++ b/src/components/layouts/default/header/header.scss
@@ -6,7 +6,8 @@ $myBezier: cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   z-index: 98;
   border-bottom: solid 1px #e8e8e8;
-  background-color: #f2f3f8;
+  // background-color: #f2f3f8;
+  background-color: #fff;
   &__inner {
     display: flex;
     align-items: center;
@@ -40,9 +41,11 @@ $myBezier: cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: center;
     min-height: 40px;
+    min-width: 200px;
     background-color: #fff;
     border-radius: 25px;
     padding-right: 10px;
+
     &-photo {
       cursor: pointer;
       display: flex;
@@ -55,6 +58,7 @@ $myBezier: cubic-bezier(0.4, 0, 0.2, 1);
         border-radius: 50%;
         object-fit: cover;
         margin-right: 10px;
+        flex: 1;
       }
       .user-name {
         color: #000;
