--- a/src/assets/styles/components/base-input.scss
+++ b/src/assets/styles/components/base-input.scss
@@ -55,12 +55,10 @@
     z-index: 1;
     display: flex;
     align-items: center;
-    cursor: pointer;
-    & + .input__block-input {
-    }
-    .fa {
-      font-size: 20px;
-      color: #ced4da;
+    transition: all 0.3s ease-in-out;
+
+    &.active {
+      transform: translateY(-50%) rotate(180deg);
     }
   }
   &-input {
@@ -123,12 +121,15 @@
     padding-top: 0.2rem;
   }
 }
+
 .input__holder {
   //margin-bottom: 0.5rem;
+
   &:last-child {
     min-height: auto;
   }
 }
+
 @-webkit-keyframes slide-in-right {
   0% {
     -webkit-transform: translateX(100rem);
@@ -141,6 +142,7 @@
     opacity: 1;
   }
 }
+
 @keyframes slide-in-right {
   0% {
     -webkit-transform: translateX(10rem);
