--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -1,8 +1,12 @@
 @import "animations";
 @import "../abstracts/variables";
 
-.overflow {
+.overflow-hidden {
   overflow: hidden;
+}
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 .bold-text {
   font-weight: 700;
@@ -49,7 +53,7 @@
   background-color: #e7eef5;
 }
 .radius {
-  border-radius: 10px;
+  border-radius: 20px;
 }
 .app-block {
   width: 100%;
@@ -180,109 +184,7 @@
     }
   }
 }
-.info-box {
-  &__inner {
-    display: flex;
-    align-items: center;
-    min-height: auto;
-    background: #fff;
-    width: 100%;
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.05);
-    border-radius: 8px;
-    overflow: hidden;
-    margin-bottom: 15px;
-  }
-  &__left {
-    display: flex;
-    align-items: center;
-    max-width: 50%;
-    width: 100%;
-    .info-box-icon {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 50px;
-      width: 50px;
-      background: linear-gradient(
-        136deg,
-        #57f5a4 0%,
-        #3aca80 62.5%,
-        #0fa859 100%
-      );
-      color: #fff;
-      border-radius: 8px;
-      margin-right: 15px;
-    }
-    .info-box-content {
-      .info-box-icon {
-        font-size: 18px;
-      }
-      .info-box-number {
-        color: #919caa;
-        font-size: 16px;
-        font-weight: 500;
-      }
-    }
-  }
-  &__right {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    max-width: 50%;
-    width: 100%;
-    .info-box-content {
-      padding: 5px 10px;
-      .isible-xs {
-        display: none;
-        text-align: center;
-        max-width: 100%;
-        margin-bottom: 5px;
-        font-size: 16px;
-        font-weight: 700;
-      }
-      .pagination {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        border-radius: 4px;
-        li {
-          width: 32px;
-          height: 32px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          font-size: 18px;
-          font-weight: 500;
-          cursor: pointer;
-          background: #f1f2f7;
-          color: #031b3c;
-          border-radius: 4px;
-          margin: 2px;
-          &.active {
-            background: linear-gradient(
-              136deg,
-              #57f5a4 0%,
-              #3aca80 62.5%,
-              #0fa859 100%
-            );
-            color: #fff;
-          }
-          &.plabel {
-            text-transform: uppercase;
-            width: auto;
-            background-color: #fff;
-            margin-right: 10px;
-            font-size: 16px;
-          }
-          span {
-            font-size: 14px;
-            font-weight: 500;
-          }
-        }
-      }
-    }
-  }
-}
+
 .overlay {
   position: fixed;
   top: 0;
@@ -390,55 +292,6 @@ input:checked + .slider:before {
 }
 //
 
-.el-input__inner {
-  border-radius: 15px !important;
-  border: 1.15px solid #dedede !important;
-  box-sizing: border-box;
-  color: #dedede;
-  border-right-color: #fff !important;
-  border-top-right-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
-  font-size: 12px !important;
-  font-family: inherit !important;
-  font-weight: 500 !important;
-
-  &::placeholder {
-    font-weight: 400 !important;
-    color: #dedede !important;
-  }
-}
-.el-input-group__append,
-.el-input-group__prepend {
-  background-color: #fff !important;
-  color: #dedede !important;
-  border: 1.15px solid #dedede !important;
-  border-radius: 15px !important;
-  border-left: 0 !important;
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-  padding: 0 15px !important;
-  cursor: pointer;
-  img {
-    vertical-align: middle;
-  }
-}
-.el-form-item.is-error .el-input__inner,
-.el-form-item.is-error .el-input__inner:focus,
-.el-form-item.is-error .el-textarea__inner,
-.el-form-item.is-error .el-textarea__inner:focus,
-.el-message-box__input input.invalid,
-.el-message-box__input input.invalid:focus {
-  border-color: #c03f53 !important;
-}
-.el-form-item__error {
-  color: #c03f53 !important;
-  font-size: 12px;
-  line-height: 1;
-  padding-top: 4px;
-  position: absolute;
-  top: 100%;
-  left: 0;
-}
 
 @media (max-width: 991px) {
   .table-block {
