--- a/src/assets/styles/utils/_typography.scss
+++ b/src/assets/styles/utils/_typography.scss
@@ -36,7 +36,8 @@
       ("gray", #738699),
       ("yellow-1", #fadd56),
       ("blue-2", #2063f0),
-      ("white", #fff)
+      ("white", #fff),
+      ("blue-3", #8bb4f9)
     )
 {
   .color-#{$name} {
