--- a/src/assets/styles/utils/_typography.scss
+++ b/src/assets/styles/utils/_typography.scss
@@ -37,7 +37,8 @@
       ("yellow-1", #fadd56),
       ("blue-2", #2063f0),
       ("white", #fff),
-      ("blue-3", #8bb4f9)
+      ("blue-3", #8bb4f9),
+      ("black", #000)
     )
 {
   .color-#{$name} {
